--- a/src/css/main.css
+++ b/src/css/main.css
@@ -22,7 +22,7 @@
 
 html {
     position: relative;
-    scroll-behavior: smooth;
+    /*scroll-behavior: smooth;*/
     margin: 0;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -81,19 +81,27 @@ a.button {
     -ms-transition: all 0.2s;
     -o-transition: all 0.2s;
     transition: all 0.2s;
-
+    box-shadow:
+            0 2.8px 2.2px rgba(0, 0, 0, 0.008),
+            0 6.7px 5.3px rgba(0, 0, 0, 0.012),
+            0 12.5px 10px rgba(0, 0, 0, 0.015),
+            0 22.3px 17.9px rgba(0, 0, 0, 0.018),
+            0 41.8px 33.4px rgba(0, 0, 0, 0.022),
+            0 100px 80px rgba(0, 0, 0, 0.03)
+;
 }
 
 a.button:hover {
     transform: translateY(-2px);
     box-shadow:
-            0 2.8px 2.2px rgba(0, 0, 0, 0.02),
-            0 6.7px 5.3px rgba(0, 0, 0, 0.028),
-            0 12.5px 10px rgba(0, 0, 0, 0.035),
-            0 22.3px 17.9px rgba(0, 0, 0, 0.042),
-            0 41.8px 33.4px rgba(0, 0, 0, 0.05),
-            0 100px 80px rgba(0, 0, 0, 0.07)
-    ;
+            0 2.8px 2.2px rgba(0, 0, 0, 0.014),
+            0 6.7px 5.3px rgba(0, 0, 0, 0.02),
+            0 12.5px 10px rgba(0, 0, 0, 0.025),
+            0 22.3px 17.9px rgba(0, 0, 0, 0.03),
+            0 41.8px 33.4px rgba(0, 0, 0, 0.036),
+            0 100px 80px rgba(0, 0, 0, 0.05)
+;
+
 }
 
 nav {
@@ -333,6 +341,9 @@ section.project-header-card {
     height: 320px;
     margin: 20px 0;
     /*background-color: #e8e8e8;*/
+    background-position: right;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 section.project-header-card .info {
@@ -392,11 +403,13 @@ footer #copy {
     margin-top: 1em;
 }
 
-footer a#back-to-top {
+footer button#back-to-top {
     text-decoration: none;
+    padding-bottom: 1px;
 }
 
-footer a#back-to-top:hover {
+footer button#back-to-top:hover {
+    padding-bottom: 0;
     border-bottom: solid 1px;
 }
 
@@ -624,8 +637,7 @@ img.header-profile {
 .mobile-pullout li a {
     text-decoration: none;
     display: block;
-    padding: 12px 0;
-    padding-left: 20px;
+    padding: 12px 0 12px 20px;
     font-size: 22px;
     font-weight: 700;
     color: var(--secondary-text-color);
