--- a/src/components/articlecard.css
+++ b/src/components/articlecard.css
@@ -139,6 +139,11 @@ ul.tags li a[data-tag-name='TypeScript'], ul.tags li.work-tag[data-tag-name='Typ
     background: rgba(0, 122, 204, 0.2);
 }
 
+ul.tags li a[data-tag-name='Kotlin'], ul.tags li.work-tag[data-tag-name='Kotlin'] {
+    color: rgba(241, 143, 51, 1);
+    background: rgba(241, 143, 51, 0.2);
+}
+
 ul.tags li a[data-tag-name='Go'], ul.tags li.work-tag[data-tag-name='Go'] {
     color: rgba(0, 162, 156, 1);
     background: rgba(0, 162, 156, 0.2);
