--- a/src/language-tabs.css
+++ b/src/language-tabs.css
@@ -1,69 +1,67 @@
 .gatsby-highlight {
-    position: relative;
-    -webkit-overflow-scrolling: touch;
+  position: relative;
+  -webkit-overflow-scrolling: touch;
 }
 .gatsby-highlight pre[class*="language-"] {
-    -webkit-overflow-scrolling: touch;
+  -webkit-overflow-scrolling: touch;
 }
 .gatsby-highlight pre[class*="language-"]::before {
-    background: black;
-    border-radius: 0 0 0.25rem 0.25rem;
-    color: white;
-    font-size: 14px;
-    font-family: var(--font-stack-ss);
-    font-weight: 700;
-    letter-spacing: 0.025rem;
-    padding: 0.1rem 0.8rem 0.2rem;
-    position: absolute;
-    right: 1rem;
-    text-align: right;
-    text-transform: uppercase;
-    top: 0;
+  background: black;
+  border-radius: 0 0 0.25rem 0.25rem;
+  color: white;
+  font-size: 14px;
+  font-family: var(--font-stack-ss);
+  font-weight: 700;
+  letter-spacing: 0.025rem;
+  padding: 0.1rem 0.8rem 0.2rem;
+  position: absolute;
+  right: 1rem;
+  text-align: right;
+  text-transform: uppercase;
+  top: 0;
 }
 
 .gatsby-highlight pre[class="language-javascript"]::before,
 .gatsby-highlight pre[class="language-js"]::before {
-    content: "js";
-    background: #f7df1e;
-    color: black;
+  content: "js";
+  background: #f7df1e;
+  color: black;
 }
 
 .gatsby-highlight pre[class="language-cpp"]::before {
-    content: "c++";
-    background: #f34b7d;
-    color: white;
+  content: "c++";
+  background: #f34b7d;
+  color: white;
 }
 
 .gatsby-highlight pre[class="language-typescript"]::before,
-.gatsby-highlight pre[class="language-ts"]::before
- {
-    content: "ts";
-    background: #2b7489;
-    color: white;
+.gatsby-highlight pre[class="language-ts"]::before {
+  content: "ts";
+  background: #2b7489;
+  color: white;
 }
 
 .gatsby-highlight pre[class="language-python"]::before,
-.gatsby-highlight pre[class="language-py"]::before
- {
-    content: "py";
-    background: #3572A5;
-    color: white;
+.gatsby-highlight pre[class="language-py"]::before {
+  content: "py";
+  background: #3572a5;
+  color: white;
 }
 
 .gatsby-highlight pre[class="language-html"]::before {
-    content: "html";
-    background: #e34f26;
-    color: white;
+  content: "html";
+  background: #e34f26;
+  color: white;
 }
 
 .gatsby-highlight pre[class="language-css"]::before {
-    content: "css";
-    background: #4B0082;
-    color: white;
+  content: "css";
+  background: #4b0082;
+  color: white;
 }
 
 .gatsby-highlight pre[class="language-haskell"]::before {
-    content: "haskell";
-    background: rgb(94,80,134);
-    color: white;
+  content: "haskell";
+  background: rgb(94, 80, 134);
+  color: white;
 }
