--- a/src/about.css
+++ b/src/about.css
@@ -105,6 +105,17 @@ ul.social li a {
     inset 0 -1.375em 0 rgba(0, 119, 181, 0.1);
 }
 
+.box-all a[data-link-color="lyft"] {
+  box-shadow: 0 10px 0 0 rgba(229, 53, 171, 0),
+    inset 0 -0.125em rgba(229, 53, 171, 0.2);
+}
+
+.box-all a[data-link-color="lyft"]:hover {
+  color: rgba(229, 53, 171, 1);
+  box-shadow: 0 1px 0 4px rgba(229, 53, 171, 0.2),
+    inset 0 -1.375em 0 rgba(229, 53, 171, 0.2);
+}
+
 .box-all a[data-link-color="github"] {
   box-shadow: 0 10px 0 0 rgba(103, 86, 255, 0),
     inset 0 -0.125em rgba(51, 51, 51, 0.2);
