--- a/src/global.css
+++ b/src/global.css
@@ -14,6 +14,12 @@ body {
   width: 92.5%;
 }
 
+@media screen and (min-width: 1920px) {
+  #container {
+    max-width: 1300px;
+  }
+}
+
 main {
   padding-top: 70px;
 }
