--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -92,13 +92,15 @@ main {
 }
 
 @media screen and (max-width: 420px) {
-  header h1 {
-    font-size: 18px;
-  }
+  header {
+    h1 {
+      font-size: 18px;
+    }
 
-  nav ul li {
-    font-size: 14px;
-    margin-left: 10px;
+    nav ul li {
+      font-size: 14px;
+      margin-left: 10px;
+    }
   }
 
   ul.social li a,
@@ -115,23 +117,23 @@ main {
 @media screen and (max-width: 360px) {
   header {
     padding-bottom: 0;
-  }
 
-  nav ul li#title {
-    float: none;
-  }
+    nav ul li#title {
+      float: none;
+    }
 
-  nav ul .right-nav {
-    float: none;
-    display: flex;
-    justify-content: space-between;
-  }
+    nav ul .right-nav {
+      float: none;
+      display: flex;
+      justify-content: space-between;
 
-  nav ul .right-nav li {
-    margin: 0;
-    height: auto;
-    line-height: 1.5;
-    text-align: center;
-    font-size: 16px;
+      li {
+        margin: 0;
+        height: auto;
+        line-height: 1.5;
+        text-align: center;
+        font-size: 16px;
+      }
+    }
   }
 }
