--- a/src/tags.scss
+++ b/src/tags.scss
@@ -74,11 +74,11 @@ ul.tags {
 }
 
 .tag-link {
-  font-size: 20px;
-  font-weight: 700;
-  opacity: 0.75;
+  font-size: 20px !important;
+  font-weight: 700 !important;
+  opacity: 0.75 !important;
 
   &:hover {
-    opacity: 1;
+    opacity: 1 !important;
   }
 }
